--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
       "baseUrl": ".",
       "paths": {
         "@/src/*": ["./src/*"],
+        "@assets/*": ["./src/assets/*"],
         "@/package": ["./package.json"],
         "@/project": ["./project.config.json"]
       }
